# SiffROI

./: .gitignore  README.md  pyproject.toml
conda-recipe/: meta.yaml
siffroi/: README.md  __init__.py  generic.py  noduli.py  roi.py  roi_protocol.py
siffroi/ellipsoid_body/: __init__.py  use_ellipse.py  von_mises.py
siffroi/ellipsoid_body/protocols/: use_ellipse.py  von_mises.py
siffroi/ellipsoid_body/rois/: __init__.py  ellipse.py
siffroi/fan_shaped_body/: __init__.py  outline_fan.py
siffroi/fan_shaped_body/protocols/: outline_fan.py
siffroi/fan_shaped_body/rois/: fan.py
siffroi/noduli/protocols/: noduli.py
siffroi/noduli/rois/: blob.py
siffroi/protocerebral_bridge/: __init__.py  circle_glomeruli.py  fit_von_mises.py
siffroi/protocerebral_bridge/protocols/: fit_von_mises.py  manual_segment.py
siffroi/protocerebral_bridge/rois/: mustache.py
siffroi/protocerebral_bridge/von_mises/napari_tools/: __init__.py  correlation_matrix_widget.py  correlation_window.py  seeds.py
siffroi/rois/: __init__.py  blob.py  ellipse.py  fan.py  mustache.py  roi.py
siffroi/scripts/: fca_protocerebral_bridge.py
siffroi/utils/: __init__.py  exceptions.py  napari_fcns.py  polygon_sources.py  regions.py  types.py
siffroi/utils/mixins/: __init__.py  napari.py
tests/: lest_fourcorr_integration.py  test_imports.py  test_save_load.py
